# universalbasic

./: .gitignore  LICENSE  Makefile  README.md  build.bat  build_c128.bat  build_c64.bat  main.c  test.bas
android/: BUILD_ANDROID.md  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.c  pal_android.c  pal_android.h
android/app/src/main/java/com/universalbasic/: BasicInterpreter.kt  MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml
docs/: android_porting.md  specs.md
include/: basic.h  pal.h
src/core/: parser.c  program.c  runtime.c  tokenizer.c
src/platform/c128/: pal_c128.c
src/platform/c64/: pal_c64.c
src/platform/stdio/: pal_stdio.c
